tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/bool_in_arith_list/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic_errors/typecheck/bool_in_arith_list/bool_in_arith_list.essence:3:22:
  |
3 | such that sum([1, 2, b, 4]) = x
  |                      ^
Type error: Boolean variable 'b' cannot be used in arithmetic context